--- a/EDA_on_Moveis_Ratings/EDA_on_MoviesRatings.ipynb
+++ b/EDA_on_Moveis_Ratings/EDA_on_MoviesRatings.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Exploratory Data Analysis on Movies Dataset**\n",
-    "\n"
+    "# **Exploratory Data Analysis on Movies Dataset**"
    ]
   },
   {
